[package]
name = "solana-pool-cache"
version = "0.1.0"
edition = "2021"

[lib]
name = "solana_pool_cache"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls-vendored"] }
futures-util = "0.3"

# WebSocket and JSON
tungstenite = "0.21"
serde = { version = "=1.0.214", features = ["derive"] }
serde_json = "1.0"

# Solana SDK
solana-sdk = "1.17"
solana-program = "1.17"
spl-token = "4.0"

# Serialization
borsh = "0.10"
base64 = "0.21"

# Config and utilities
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4"] }
deadpool-postgres = "0.10"

# Proxy support
tokio-native-tls = "0.3"
native-tls = "0.2"
url = "2.5"

# HTTP Server (for API)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
